--- a/st.css
+++ b/st.css
@@ -7,7 +7,7 @@
 
 
 #title {
-    background-color: aqua;
+    background-color: rgb(63, 0, 135);
     font-size:300%;
     text-align: center;
     width:100%;
